--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,57 @@
-certifi==2018.8.13
+beautifulsoup4==4.6.0
+certifi==2018.4.16
 chardet==3.0.4
 click==6.7
+cycler==0.10.0
+Cython==0.25.2
 decorator==4.0.11
+fake-useragent==0.1.10
 Flask==1.0.2
-gunicorn==19.9.0
-idna==2.7
+future==0.16.0
+httplib2==0.11.3
+huepy==0.9.8.1
+idna==2.5
 imageio==2.1.2
+instabot==0.4.2
 InstagramAPI==1.0.2
 itsdangerous==0.24
 Jinja2==2.10
+kiwisolver==1.0.1
+magickwand==0.2
 MarkupSafe==1.0
+matplotlib==2.2.3
 moviepy==0.2.3.2
-numpy==1.15.0
+mysqlclient==1.3.13
+nltk==3.3
+numpy==1.13.1
 oauthlib==2.1.0
-Pillow==5.2.0
-praw==6.0.0
-prawcore==1.0.0
+olefile==0.44
+Pillow==4.1.0
+praw==5.0.2.dev0
+prawcore==0.11.0
+psycopg2==2.7.5
+pygame==1.9.3
+pyocr==0.4.6
+pyparsing==2.2.0
 PySocks==1.6.8
+pytesseract==0.1.6
+python-dateutil==2.7.3
+python-instagram==1.3.2
+pytz==2018.5
 requests==2.11.1
 requests-oauthlib==1.0.0
 requests-toolbelt==0.7.0
-six==1.11.0
+schedule==0.5.0
+scikit-learn==0.19.2
+scipy==1.1.0
+simplejson==3.16.0
+six==1.10.0
+textblob==0.15.1
 tqdm==4.11.2
 tweepy==3.6.0
 update-checker==0.16
-urllib3==1.23
+urllib3==1.22
+virtualenv==15.1.0
+Wand==0.4.4
+web.py==0.40.dev0
 Werkzeug==0.14.1
