--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ decorator==4.0.11
 fake-useragent==0.1.10
 Flask==1.0.2
 future==0.16.0
+gunicorn==19.9.0
 httplib2==0.11.3
 huepy==0.9.8.1
 idna==2.5
@@ -27,7 +28,7 @@ numpy==1.13.1
 oauthlib==2.1.0
 olefile==0.44
 Pillow==4.1.0
-praw==6.0.0
+praw==5.0.2.dev0
 prawcore==0.11.0
 psycopg2==2.7.5
 pygame==1.9.3
