--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ numpy==1.13.1
 oauthlib==2.1.0
 olefile==0.44
 Pillow==4.1.0
-praw==5.0.2.dev0
+praw==6.0.0
 prawcore==0.11.0
 psycopg2==2.7.5
 pygame==1.9.3
